# tesla-ble

./: .clang-tidy  .codecov.yml  .gitignore  AGENTS.md  CMakeLists.txt  README.md  idf_component.yml  library.json  progress.md
.github/workflows/: cmake-single-platform.yml  cmake.yml  release.yml
.zed/: settings.json
_codeql_build_dir/tests/: test_ad_buffer_construction  test_ad_buffer_construction[1]_include.cmake  test_ad_buffer_construction[1]_tests.cmake  test_client  test_client[1]_include.cmake  test_client[1]_tests.cmake  test_error_handling  test_error_handling[1]_include.cmake  test_error_handling[1]_tests.cmake  test_key_generation  test_key_generation[1]_include.cmake  test_key_generation[1]_tests.cmake  test_logging  test_logging[1]_include.cmake  test_logging[1]_tests.cmake  test_message_building  test_message_building[1]_include.cmake  test_message_building[1]_tests.cmake  test_message_parsing  test_message_parsing[1]_include.cmake  test_message_parsing[1]_tests.cmake  test_protocol_authentication  test_protocol_authentication[1]_include.cmake  test_protocol_authentication[1]_tests.cmake  test_protocol_compliance  test_protocol_compliance[1]_include.cmake  test_protocol_compliance[1]_tests.cmake  test_protocol_edge_cases  test_protocol_edge_cases[1]_include.cmake  test_protocol_edge_cases[1]_tests.cmake  test_protocol_handshake  test_protocol_handshake[1]_include.cmake  test_protocol_handshake[1]_tests.cmake  test_protocol_vectors  test_protocol_vectors[1]_include.cmake  test_protocol_vectors[1]_tests.cmake  test_session_management  test_session_management[1]_include.cmake  test_session_management[1]_tests.cmake  test_session_recovery  (+11 more)
examples/simple/: .gitignore  CMakeLists.txt  log.cpp  main.cpp
include/: adapters.h  car_server.pb.h  client.h  command_error.h  common.pb.h  crypto_context.h  defs.h  errors.h  errors.pb.h  keys.pb.h  logging.h  managed_charging.pb.h  message_builders.h  message_processor.h  peer.h  session.h  signatures.pb.h  sliding_window.h  tb_logging.h  tb_utils.h  timestamp.pb.h  universal_message.pb.h  vcsec.pb.h  vehicle.h  vehicle.pb.h  vin_utils.h
proto/: Makefile  README.md  car_server.options  signatures.options  universal_message.options  vcsec.options  vehicle.options
scripts/: clang-format.sh  clang-tidy.sh  lint.sh  release.sh  run_tests.sh  set-version.sh  setup_dev_environment.sh
src/: car_server.pb.c  client.cpp  common.pb.c  crypto_context.cpp  errors.cpp  errors.pb.c  keys.pb.c  logging.cpp  logging_bridge.cpp  message_builders.cpp  message_processor.cpp  peer.cpp  session.cpp  signatures.pb.c  tb_logging.cpp  tb_utils.cpp  universal_message.pb.c  vcsec.pb.c  vehicle.cpp  vehicle.pb.c  vin_utils.cpp
tests/: .gitignore  CMakeLists.txt  test_ad_buffer_construction.cpp  test_client.cpp  test_constants.h  test_error_handling.cpp  test_key_generation.cpp  test_logging.cpp  test_message_building.cpp  test_message_parsing.cpp  test_pb_utils.cpp  test_protocol_authentication.cpp  test_protocol_compliance.cpp  test_protocol_edge_cases.cpp  test_protocol_failures.cpp  test_protocol_handshake.cpp  test_protocol_vectors.cpp  test_session_management.cpp  test_session_recovery.cpp  test_sliding_window.cpp  test_tb_utils.cpp  test_utils.cpp  test_vehicle.cpp  test_vin_utils.cpp
tests/mocks/: mock_adapters.h
